# IBKR-MCP-Server

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  test_connection.py
src/ibkr_mcp/: __init__.py  config.py  ibkr_client.py  models.py  server.py
